force-app/main/default/objects/NotificationTarget__c/NotificationTarget__c.object-meta.xml
<CustomObject>
    <description>[P2] 공통 - 알림 추가 수신자 Group, Role, User</description>
    <label>Notification Target</label>
    <nameField>
        <displayFormat>TG{YY}{MM}{DD}{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>