force-app/main/default/objects/NotificationTarget__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>협업그룹명 (CollaborationGroup명)</description>
    <label>GroupName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>