force-app/main/default/objects/NotificationTarget__c/fields/RoleId__c.field-meta.xml
<CustomField>
    <fullName>RoleId__c</fullName>
    <description>역할Id</description>
    <label>RoleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>