force-app/main/default/objects/NotificationTarget__c/fields/RoleName__c.field-meta.xml
<CustomField>
    <fullName>RoleName__c</fullName>
    <description>역할명</description>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>