force-app/main/default/objects/NotificationTarget__c/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <description>협업그룹</description>
    <label>Group</label>
</RecordType>