force-app/main/default/objects/NotificationTarget__c/recordTypes/Role.recordType-meta.xml
<RecordType>
    <fullName>Role</fullName>
    <active>true</active>
    <description>역할</description>
    <label>Role</label>
</RecordType>