force-app/main/default/objects/NotificationTarget__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <description>사용자</description>
    <label>User</label>
</RecordType>